--- a/package.json
+++ b/package.json
@@ -4,19 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "es6-collections": "^0.4.0",
     "lodash": "^2.4.1",
-    "mocha": "^2.0.1"
+    "mocha": "^2.0.1",
+    "6to5": "*"
   },
   "devDependencies": {
+    "6to5ify": "^2.0.0",
     "browserify": "^6.3.3",
+    "es6-shim": "^0.22.1",
     "es6ify": "^1.5.1",
     "gulp": "^3.8.10",
+    "gulp-6to5": "^1.0.2",
+    "gulp-concat": "^2.4.2",
+    "gulp-sourcemaps": "^1.2.8",
     "gulp-util": "^3.0.1",
     "mocha-traceur": "^2.0.0",
     "node-notifier": "^4.0.2",
